# ollama-model-viewer

./: .gitignore  GUI_IMPLEMENTATION.md  README.md  gui_bridge.py  launch.sh  macos_gui.py  ollama_model_viewer.py  requirements.txt  test_gui_logic.py  test_macos_gui.py  test_tkinter.py
ollama-model-viewer/: README.md  launch.sh  ollama_model_viewer.py
tauri-app/: DEMO.md  demo.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-app/src/: main.ts  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: config.rs  main.rs  ollama.rs  openwebui.rs
